--- a/src/app/components/admin/admin-user/admin-user-edit/admin-user-edit.component.html
+++ b/src/app/components/admin/admin-user/admin-user-edit/admin-user-edit.component.html
@@ -124,6 +124,7 @@
                             <i class="fa fa-undo"></i>&nbsp;Cancel
                         </a>
                         <button class="btn btn-danger btn-sm"
+                                *ngIf="isAdmin"
                                 (click)="onDeleteUser()">
                             <i class="fa fa-trash"></i>&nbsp;Delete
                         </button>
