--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -16,6 +16,7 @@
                    'fa-chevron-double-right':!toggleSidenav}">
                 </i>
             </button>
+            <flash-messages class="text-center"></flash-messages>
             <router-outlet></router-outlet>
             <ddw-admin-mobile-footernav></ddw-admin-mobile-footernav>
         </div>
