Replaced alerts with snackbar alerts for cleaner look/feel

--- a/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
+++ b/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
@@ -6,7 +6,7 @@
                     <span class="text-dark">
                <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                     alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
-                        <i class="fal fa-chart-line"></i>&nbsp;Admin
+                        <i class="fa fa-chart-line"></i>&nbsp;Admin
                     </span> Meta Settings
                 </h1>
             </div>
