--- a/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
+++ b/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
@@ -74,7 +74,7 @@
                                     <label class="form-check-label"
                                            for="disableAdmin"
                                            (change)="disableAdmin = !disableAdmin">
-                                        Disable Admin?
+                                        Disable ability for users to become <b>Admin</b>?
                                     </label>
                                 </div>
                             </div>
