--- a/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
+++ b/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
@@ -27,7 +27,7 @@
                             <a [routerLink]="['/admin/users/', user.uid]">
                                 <img [src]="user.photoURL"
                                      [alt]="user.displayName"
-                                     class="profile-image">
+                                     class="profile-image rounded-circle">
                             </a>
                         </td>
                         <td scope="col">
