--- a/src/app/components/admin/admin-core/admin-ads/admin-ads.component.html
+++ b/src/app/components/admin/admin-core/admin-ads/admin-ads.component.html
@@ -6,7 +6,7 @@
                     <span class="text-dark">
                <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                     alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
-                        <i class="fal fa-money-bill-wave"></i>&nbsp;Admin
+                        <i class="fa fa-money-bill-wave"></i>&nbsp;Admin
                     </span> Ads
                 </h1>
             </div>
