--- a/src/app/components/admin/admin-core/admin-login/admin-login.component.html
+++ b/src/app/components/admin/admin-core/admin-login/admin-login.component.html
@@ -26,18 +26,31 @@
                             <label>Email address</label>
                             <input type="email"
                                    class="form-control"
+                                   required
+                                   [class.invalid]="!f.email.valid && f.email.touched"
                                    formControlName="email">
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.email.valid && f.email.touched">
+                                Valid <b>Email</b> is required!
+                            </p>
                         </div>
 
                         <div class="form-group">
                             <label>Password</label>
                             <input type="password"
                                    class="form-control"
+                                   required
+                                   [class.invalid]="!f.password.valid && f.password.touched"
                                    formControlName="password">
+                            <p class="help-block alert alert-warning text-center mt-1"
+                               *ngIf="!f.password.valid && f.password.touched">
+                                Valid <b>Password</b> is required!
+                            </p>
                         </div>
 
                         <button type="submit"
-                                class="btn btn-primary"><i class="fa fa-unlock"></i>&nbsp;Login
+                                class="btn btn-primary">
+                            <i class="fa fa-unlock"></i>&nbsp;Login
                         </button>
                     </form>
 
