--- a/src/app/components/admin/admin-user/admin-user.component.html
+++ b/src/app/components/admin/admin-user/admin-user.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="localUser.admin">
+<div class="row" *ngIf="isAdmin">
     <div class="container">
         <button class="btn btn-primary btn-sm mb-3 float-right"
                 [routerLink]="['new']"><i class="fa fa-user-plus"></i>&nbsp;New User
