Basic footer added

--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.css
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.css
@@ -25,6 +25,7 @@ a.sidenav-link {
     text-decoration: none;
 }
 
-.ddw-logo {
-    margin-left: 1.5em;
+img.ddw-logo {
+    /*margin-left: em;*/
+    /*max-width: 150px;*/
 }
