--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -2,8 +2,8 @@
 <div class="app-brand demo pt-4 pb-3">
               <span class="app-brand-logo demo">
               <a [routerLink]="['/admin']">
-                      <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-grey-100.png"
-                           alt="ddw logo" class="ddw-logo p-1">
+                      <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/gray-ddw-150.png"
+                           alt="ddw logo" class="ddw-logo img-fluid p-1">
               </a>
           </span>
 
