--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -1,3 +1,100 @@
-<p>
-  footer works!
-</p>
+<div class="row top-footer">
+    <div class="col-md-3">
+        <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/DDW_50_Yrs_Stand-alone_logo_gold_on_dark_rgb.png"
+             alt="DDW 50 years logo"
+             class="img-fluid">
+    </div>
+    <div class="col-md-5">
+        <p>Plan Your Itinerary with the Free DDW Mobile App.</p>
+        <p>The free app helps you search scientific sessions, browse posters, and find everything you need to know at
+            the event. It is now available to download.</p>
+        <div class="row">
+            <div class="col-sm-6">
+                <a class="app apple" href="http://ativ.me/ev7"></a>
+            </div>
+            <div class="col-sm-6">
+                <a class="app google" href="http://ativ.me/ev8"></a>
+            </div>
+        </div>
+    </div>
+    <div class="col-auto right-panel">
+        <p><img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-white.png"
+                alt="DDW logo"
+                class="img-fluid ddw-white"></p>
+        <p>Contact Us <br>
+            301-272-0022 <br>
+            administration@ddw.org</p>
+
+        <p>Digestive Disease Week <br>
+            4930 Del Ray Avenue <br>
+            Bethesda, MD 20814</p>
+    </div>
+</div>
+
+<div class="row middle-footer text-left">
+    <div class="col-md-2">
+        <h6>Register</h6>
+        <ul>
+            <li>Registration</li>
+            <li>Housing</li>
+            <li>Host City &amp; Travel Arrangements</li>
+            <li>International Attendees</li>
+            <li>First-Time Attendee</li>
+            <li>First-Time Attendee Guide</li>
+        </ul>
+
+    </div>
+    <div class="col-md-2">
+        <h6>Attendee Planning</h6>
+        <ul>
+            <li>Program Planning Resources</li>
+            <li>Scope Out the Exhibit Hall</li>
+            <li>Networking Events</li>
+            <li>Mobile App</li>
+            <li>Online Planner</li>
+            <li>DDW Tracks</li>
+        </ul>
+    </div>
+    <div class="col-md-2">
+        <h6>
+            Education
+        </h6>
+        <ul>
+            <li>Scientific Sessions</li>
+            <li>Abstracts</li>
+            <li>Poster Hall</li>
+            <li>CME Credit &amp; Certificate of Attendance</li>
+            <li>Session Recordings</li>
+        </ul>
+    </div>
+    <div class="col-md-2">
+        <h6>Exhibitor Information</h6>
+        <ul>
+            <li>Reserve Your Space</li>
+            <li>Floor Plan</li>
+            <li>Exhibitor Portal</li>
+            <li>Exhibitor Policies</li>
+            <li>Marketing Opportunities</li>
+            <li>Host an On-Site Meeting</li>
+        </ul>
+    </div>
+    <div class="col-md-2">
+        <h6>News &amp; Media</h6>
+        <ul>
+            <li>DDW Daily News</li>
+            <li>Press Room</li>
+            <li>Press Releases</li>
+            <li>Social Media</li>
+            <li>Media Policy</li>
+            <li>Guidelines &amp; License for Use of DDW Content</li>
+        </ul>
+    </div>
+    <div class="col-md-2">
+        <h6>Presenters</h6>
+        <ul>
+            <li>Submit an Abstract</li>
+            <li>Travel Awards</li>
+            <li>Presenter Resources</li>
+        </ul>
+    </div>
+</div>
