--- a/src/app/components/core/footer/footer.component.html
+++ b/src/app/components/core/footer/footer.component.html
@@ -4,7 +4,7 @@
              alt="DDW 50 years logo"
              class="img-fluid">
     </div>
-    <div class="col-md-5">
+    <div class="col-md-6">
         <p>Plan Your Itinerary with the Free DDW Mobile App.</p>
         <p>The free app helps you search scientific sessions, browse posters, and find everything you need to know at
             the event. It is now available to download.</p>
@@ -33,68 +33,99 @@
 
 <div class="row middle-footer text-left">
     <div class="col-md-2">
-        <h6>Register</h6>
+        <h5>Register</h5>
         <ul>
-            <li>Registration</li>
-            <li>Housing</li>
-            <li>Host City &amp; Travel Arrangements</li>
-            <li>International Attendees</li>
-            <li>First-Time Attendee</li>
-            <li>First-Time Attendee Guide</li>
+            <li><a [routerLink]="['#']">Registration</a></li>
+            <li><a [routerLink]="['#']">Housing</a></li>
+            <li><a [routerLink]="['#']">Host City &amp; Travel Arrangements</a></li>
+            <li><a [routerLink]="['#']">International Attendees</a></li>
+            <li><a [routerLink]="['#']">First-Time Attendee</a></li>
+            <li><a [routerLink]="['#']">First-Time Attendee Guide</a></li>
         </ul>
 
     </div>
     <div class="col-md-2">
-        <h6>Attendee Planning</h6>
+        <h5>Attendee Planning</h5>
         <ul>
-            <li>Program Planning Resources</li>
-            <li>Scope Out the Exhibit Hall</li>
-            <li>Networking Events</li>
-            <li>Mobile App</li>
-            <li>Online Planner</li>
-            <li>DDW Tracks</li>
+            <li><a [routerLink]="['#']">Program Planning Resources</a></li>
+            <li><a [routerLink]="['#']">Scope Out the Exhibit Hall</a></li>
+            <li><a [routerLink]="['#']">Networking Events</a></li>
+            <li><a [routerLink]="['#']">Mobile App</a></li>
+            <li><a [routerLink]="['#']">Online Planner</a></li>
+            <li><a [routerLink]="['#']">DDW Tracks</a></li>
         </ul>
     </div>
     <div class="col-md-2">
-        <h6>
+        <h5>
             Education
-        </h6>
+        </h5>
         <ul>
-            <li>Scientific Sessions</li>
-            <li>Abstracts</li>
-            <li>Poster Hall</li>
-            <li>CME Credit &amp; Certificate of Attendance</li>
-            <li>Session Recordings</li>
+            <li><a [routerLink]="['#']">Scientific Sessions</a></li>
+            <li><a [routerLink]="['#']">Abstracts</a></li>
+            <li><a [routerLink]="['#']">Poster Hall</a></li>
+            <li><a [routerLink]="['#']">CME Credit &amp; Certificate of Attendance</a></li>
+            <li><a [routerLink]="['#']">Session Recordings</a></li>
         </ul>
     </div>
     <div class="col-md-2">
-        <h6>Exhibitor Information</h6>
+        <h5>Exhibitor Information</h5>
         <ul>
-            <li>Reserve Your Space</li>
-            <li>Floor Plan</li>
-            <li>Exhibitor Portal</li>
-            <li>Exhibitor Policies</li>
-            <li>Marketing Opportunities</li>
-            <li>Host an On-Site Meeting</li>
+            <li><a [routerLink]="['#']">Reserve Your Space</a></li>
+            <li><a [routerLink]="['#']">Floor Plan</a></li>
+            <li><a [routerLink]="['#']">Exhibitor Portal</a></li>
+            <li><a [routerLink]="['#']">Exhibitor Policies</a></li>
+            <li><a [routerLink]="['#']">Marketing Opportunities</a></li>
+            <li><a [routerLink]="['#']">Host an On-Site Meeting</a></li>
         </ul>
     </div>
     <div class="col-md-2">
-        <h6>News &amp; Media</h6>
+        <h5>News &amp; Media</h5>
         <ul>
-            <li>DDW Daily News</li>
-            <li>Press Room</li>
-            <li>Press Releases</li>
-            <li>Social Media</li>
-            <li>Media Policy</li>
-            <li>Guidelines &amp; License for Use of DDW Content</li>
+            <li><a [routerLink]="['#']">DDW Daily News</a></li>
+            <li><a [routerLink]="['#']">Press Room</a></li>
+            <li><a [routerLink]="['#']">Press Releases</a></li>
+            <li><a [routerLink]="['#']">Social Media</a></li>
+            <li><a [routerLink]="['#']">Media Policy</a></li>
+            <li><a [routerLink]="['#']">Guidelines &amp; License for Use of DDW Content</a></li>
         </ul>
     </div>
     <div class="col-md-2">
-        <h6>Presenters</h6>
+        <h5>Presenters</h5>
         <ul>
-            <li>Submit an Abstract</li>
-            <li>Travel Awards</li>
-            <li>Presenter Resources</li>
+            <li><a [routerLink]="['#']">Submit an Abstract</a></li>
+            <li><a [routerLink]="['#']">Travel Awards</a></li>
+            <li><a [routerLink]="['#']">Presenter Resources</a></li>
         </ul>
+    </div>
+</div>
+
+<div class="row middle-bottom">
+    <div class="container text-center">
+        <div class="offset-md-2 col-md-8">
+            <h5>Sponsoring Societies: AASLD | AGA | ASGE | SSAT</h5>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid copyright">
+    <div class="row">
+        <div class="col-md-7">
+            <p>
+                &nbsp;Privacy Policy | &copy; 2018 Digestive Disease Week. All Rights Reserved.
+            </p>
+        </div>
+        <div class="col">
+            <p>
+                Site Designed by Brightfind and Powered by Higher Logic&nbsp;
+                <a href="https://www.facebook.com/DDWMeeting" target="_blank" class="social"><i
+                        class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com/DDWMeeting" target="_blank" class="social"><i
+                        class="fab fa-twitter"></i></a>
+                <a href="https://www.youtube.com/user/DDWMeeting" target="_blank" class="social"><i
+                        class="fab fa-youtube"></i></a>
+                <a href="https://www.instagram.com/ddwmeeting" target="_blank" class="social"><i
+                        class="fab fa-instagram"></i></a>
+            </p>
+        </div>
     </div>
 </div>
