Each type of page is dynamically renderd on the navbar dropdowns

--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -96,11 +96,12 @@
                                     [class.invalid]="!f.category.valid && f.category.touched"
                                     [(ngModel)]="page.category"
                                     formControlName="category">
-                                <option>Register</option>
-                                <option>Attendee Planning</option>
-                                <option>Education</option>
-                                <option>Exhibitor Information</option>
-                                <option>News &amp;amp; Media</option>
+                                <option>register</option>
+                                <option>attendee-planning</option>
+                                <option>education</option>
+                                <option>exhibitor-information</option>
+                                <option>news-and-media</option>
+                                <option>presenters</option>
                             </select>
                         </div>
 
