--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -62,11 +62,12 @@
                                 id="category"
                                 [class.invalid]="!f.category.valid && f.category.touched"
                                 formControlName="category">
-                            <option>Register</option>
-                            <option>Attendee Planning</option>
-                            <option>Education</option>
-                            <option>Exhibitor Information</option>
-                            <option>News &amp; Media</option>
+                            <option>register</option>
+                            <option>attendee-planning</option>
+                            <option>education</option>
+                            <option>exhibitor-information</option>
+                            <option>news-and-media</option>
+                            <option>presenters</option>
                         </select>
                     </div>
 
