--- a/src/app/components/core/navbar/navbar.component.html
+++ b/src/app/components/core/navbar/navbar.component.html
@@ -11,21 +11,127 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle"
+                   href="#"
+                   id="registerDropdown"
+                   role="button"
+                   data-toggle="dropdown"
+                   aria-haspopup="true"
+                   aria-expanded="false">
+                    Register
+                </a>
+                <div class="dropdown-menu"
+                     aria-labelledby="registerDropdown">
+                    <a class="dropdown-item"
+                       *ngFor="let regPage of registerPages$ | async"
+                       [routerLink]="['/pages/', regPage.$key]">
+                        {{ regPage.title }}
+                    </a>
+                </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Mobile App</a>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle"
+                   href="#"
+                   id="attendeeDropdown"
+                   role="button"
+                   data-toggle="dropdown"
+                   aria-haspopup="true"
+                   aria-expanded="false">
+                    Attendee Planning
+                </a>
+                <div class="dropdown-menu"
+                     aria-labelledby="attendeeDropdown">
+                    <a class="dropdown-item"
+                       *ngFor="let attnPage of attendeePlanningPages$ | async"
+                       [routerLink]="['/pages/', attnPage.$key]">
+                        {{ attnPage.title }}
+                    </a>
+                </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Disclosures</a>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle"
+                   href="#"
+                   id="edDropdown"
+                   role="button"
+                   data-toggle="dropdown"
+                   aria-haspopup="true"
+                   aria-expanded="false">
+                    Education
+                </a>
+                <div class="dropdown-menu"
+                     aria-labelledby="edDropdown">
+                    <a class="dropdown-item"
+                       *ngFor="let edPage of educationPages$ | async"
+                       [routerLink]="['/pages/', edPage.$key]">
+                        {{ edPage.title }}
+                    </a>
+                </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Career Center</a>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle"
+                   href="#"
+                   id="exhDropdown"
+                   role="button"
+                   data-toggle="dropdown"
+                   aria-haspopup="true"
+                   aria-expanded="false">
+                    Exhibitor Information
+                </a>
+                <div class="dropdown-menu"
+                     aria-labelledby="exhDropdown">
+                    <a class="dropdown-item"
+                       *ngFor="let exhPage of exhibitorInfoPages$ | async"
+                       [routerLink]="['/pages/', exhPage.$key]">
+                        {{ exhPage.title }}
+                    </a>
+                </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">DDW Blog</a>
+
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle"
+                   href="#"
+                   id="newsDropdown"
+                   role="button"
+                   data-toggle="dropdown"
+                   aria-haspopup="true"
+                   aria-expanded="false">
+                    News &amp; Media
+                </a>
+                <div class="dropdown-menu"
+                     aria-labelledby="newsDropdown">
+                    <a class="dropdown-item"
+                       *ngFor="let newsPage of newsAndMediaPages$ | async"
+                       [routerLink]="['/pages/', newsPage.$key]">
+                        {{ newsPage.title }}
+                    </a>
+                </div>
             </li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle"
+                   href="#"
+                   id="presDropdown"
+                   role="button"
+                   data-toggle="dropdown"
+                   aria-haspopup="true"
+                   aria-expanded="false">
+                    Presenters
+                </a>
+                <div class="dropdown-menu"
+                     aria-labelledby="presDropdown">
+                    <a class="dropdown-item"
+                       *ngFor="let presPage of presentersPages$ | async"
+                       [routerLink]="['/pages/', presPage.$key]">
+                        {{ presPage.title }}
+                    </a>
+                </div>
+            </li>
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
