Fixed bug where the user details was only showing the current user

--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -1,4 +1,9 @@
 <!-- * ADMIN-PAGE-LIST * -->
+<div class="row">
+    <div class="container">
+        <h2>Pages</h2>
+    </div>
+</div>
 
 <div class="container mb-3">
     <div class="row">
