--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
@@ -1,39 +1,55 @@
 <!-- * ADMIN-PAGE-DETAILS (PREVIEW) * -->
 <div class="row mb-4">
     <div class="container">
-        <a class="text-primary back-users"
-           [routerLink]="['/admin/pages']"><i class="fal fa-arrow-circle-left"></i>&nbsp;All Pages
-        </a>
-
-        <div class="card mt-4 bg-light" *ngIf="page">
-            <h3 class="card-header">
-                {{ page.title }}
-            </h3>
-            <div class="card-body">
-                <h5 class="card-title">
-                    {{ page.author }}
-                </h5>
-                <p class="card-text">
-                    <b>Category:</b> {{ page.category }}
-                </p>
-                <div class="btn-group float-right"
-                     role="group"
-                     aria-label="Basic example">
-                    <a class="btn btn-secondary btn-sm"
-                       [routerLink]="['edit']">
-                        <i class="fa fa-pencil"></i>&nbsp;Edit
-                    </a>
-                    <a class="btn btn-warning btn-sm"
-                       [routerLink]="['/admin/pages']">
-                        <i class="fa fa-undo"></i>&nbsp;Cancel
-                    </a>
-                    <button class="btn btn-danger btn-sm"
-                            (click)="onDeletePage()">
-                        <i class="fa fa-trash"></i>&nbsp;Delete
-                    </button>
-                </div>
+        <!-- * Edit Navbar Panel * -->
+        <nav class="navbar navbar-expand-lg bg-dark text-light" *ngIf="page">
+            <a class="navbar-brand" href="#">
+                <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/gray-ddw-150.png" width="100"
+                     class="d-inline-block align-top" alt="DDW">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                       <i class="fa fa-dot-circle"></i> {{ page.title }}
+                    </li>
+                    <li class="nav-item">
+                       <i class="fa fa-user"></i> {{ page.author }}
+                    </li>
+                    <li class="nav-item ">
+                        <div class="badge badge-secondary">
+                           <i class="fa fa-tags"></i> {{ page.category }}
+                        </div>
+                    </li>
+                </ul>
+                <form class="form-inline mx-auto">
+                    <div class="btn-group float-right"
+                         role="group"
+                         aria-label="Basic example">
+                        <a class="btn btn-primary"
+                           [routerLink]="['/admin/pages']">
+                            <i class="fal fa-arrow-circle-left"></i>&nbsp;All Pages
+                        </a>
+                        <a class="btn btn-secondary"
+                           [routerLink]="['edit']">
+                            <i class="fa fa-pencil"></i>&nbsp;Edit
+                        </a>
+                        <a class="btn btn-warning"
+                           [routerLink]="['/admin/pages']">
+                            <i class="fa fa-undo"></i>&nbsp;Cancel
+                        </a>
+                        <button class="btn btn-danger"
+                                (click)="onDeletePage()">
+                            <i class="fa fa-trash"></i>&nbsp;Delete
+                        </button>
+                    </div>
+                </form>
             </div>
-        </div>
+        </nav>
+
     </div>
 </div>
 
